# chronos

./: .env.example  .gitignore  Cargo.toml  ENDPOINTS.md  TIME_TRACKING_API.md  WASM_README.md  build-server.sh  build-wasm.sh  chronos-api.postman_collection.json  docker-compose.yml  index.html  styles.css  test_endpoints.sh
frontend/chronos-frontend/: package.json
frontend/chronos-frontend/src/app/api/auth/login/: route.ts
frontend/chronos-frontend/src/app/api/auth/logout/: route.ts
frontend/chronos-frontend/src/app/api/auth/register/: route.ts
frontend/chronos-frontend/src/app/api/profile/: route.ts
frontend/chronos-frontend/src/app/api/projects/: route.ts
frontend/chronos-frontend/src/app/api/projects/[id]/: route.ts
frontend/chronos-frontend/src/app/api/tasks/: route.ts
frontend/chronos-frontend/src/app/api/tasks/[id]/: route.ts
frontend/chronos-frontend/src/app/api/time-entries/: route.ts
frontend/chronos-frontend/src/app/api/time-entries/[id]/: route.ts
frontend/chronos-frontend/src/app/api/users/: route.ts
frontend/chronos-frontend/src/app/dashboard/: page.tsx
frontend/chronos-frontend/src/app/login/: page.tsx
frontend/chronos-frontend/src/app/profile/: page.tsx
frontend/chronos-frontend/src/app/projects/: page.tsx
frontend/chronos-frontend/src/app/register/: page.tsx
frontend/chronos-frontend/src/app/tasks/: page.tsx
frontend/chronos-frontend/src/components/: time-entries-table.tsx
frontend/chronos-frontend/src/components/projects/: project-form.tsx
frontend/chronos-frontend/src/components/tasks/: task-form.tsx
frontend/chronos-frontend/src/components/time-tracking/: delete-confirmation-dialog.tsx  time-entries-table.tsx  time-entry-filters.tsx  time-entry-form.tsx  time-stats.tsx  timer-widget.tsx
frontend/chronos-frontend/src/hooks/: use-time-entries.ts  use-timer.ts
frontend/chronos-frontend/src/lib/: time-utils.ts
frontend/chronos-frontend/src/lib/api/: projects.ts  tasks.ts  time-entries.ts
frontend/chronos-frontend/src/lib/validations/: time-entry.ts
frontend/chronos-frontend/src/types/: time-entries.ts
migrations/: 20250917095746_create_users_table.sql  20250922134239_create_user_updated_at_trigger.sql  20250922134255_create_refresh_tokens_table.sql  20250922134302_create_password_reset_tokens_table.sql  20250922134843_add_indexes_to_users_table.sql  20250922134855_add_indexes_to_refresh_tokens_table.sql  20250922134910_add_indexes_to_reset_tokens_table.sql  20250922140102_insert_user_into_user_table.sql  20250926070818_add_validations_and_constraints.sql  20251001071629_create_blacklisted_tokens_table.sql  20251001123000_create_login_attempts_table.sql  20251001123001_create_account_lockouts_table.sql  20251001123002_update_refresh_tokens_table.sql  20251103000001_create_projects_table.sql  20251103000002_create_tasks_table.sql  20251103000003_create_time_entries_table.sql  20251103000004_create_time_entries_triggers.sql  20251215000001_fix_boolean_columns.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/errors/: mod.rs
src/app/middleware/: auth_middleware.rs  mod.rs  security.rs
src/app/models/: auth.rs  jwt.rs  login_attempt.rs  mod.rs  password_reset.rs  project.rs  task.rs  time_entry.rs  user.rs
src/app/repositories/: login_attempt_repository.rs  mod.rs  password_reset_repository.rs  project_repository.rs  task_repository.rs  time_entry_repository.rs  token_blacklist_repository.rs  user_repository.rs
src/app/security/: mod.rs
src/app/services/: auth_service.rs  email_service.rs  jwt_service.rs  mod.rs  project_service.rs  secure_login_service.rs  task_service.rs  time_entry_service.rs  user_service.rs
src/app/validation/: mod.rs
src/routes/: auth.rs  mod.rs  projects.rs  tasks.rs  time_entries.rs  users.rs
src/wasm_frontend/: mod.rs  ui.rs
tests/: auth_security_integration_tests.rs  auth_tests.rs  integration_tests.rs  jwt_rotation_tests.rs  jwt_tests.rs  login_integration_tests.rs  logout_integration_tests.rs  logout_tests.rs  password_reset_tests.rs  profile_integration_tests.rs  profile_tests.rs  secure_login_tests.rs  security_tests.rs  time_entry_integration_tests.rs  time_entry_tests.rs  validation_and_error_handling_tests.rs
(+3 files in other folders)
