[package]
name = "chronos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
sqlx = { version = "0.8.4", features = ["runtime-tokio", "postgres", "migrate", "uuid", "time"] }
tokio = {version = "1.47.1", features = ["full"]}
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.2"
chrono = { version = "0.4.42", features = ["serde"] }
bcrypt = "0.15"
time = { version = "0.3.43", features = ["serde"] }
argon2 = "0.5.3"
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.3"
tower_governor = "0.8.0"
rand = "0.8.5"
