[package]
name = "chronos"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Server dependencies (only for non-WASM targets)
axum = { version = "0.8.4", optional = true }
dotenvy = { version = "0.15.7", optional = true }
sqlx = { version = "0.8.4", features = ["runtime-tokio", "postgres", "migrate", "uuid", "time"], optional = true }
tokio = { version = "1.47.1", features = ["macros", "rt", "time"], optional = true }
tower = { version = "0.5.2", optional = true }
bcrypt = { version = "0.15", optional = true }
argon2 = { version = "0.5.3", optional = true }
tower_governor = { version = "0.8.0", optional = true }
jsonwebtoken = { version = "10.0.0", features = ["use_pem", "rust_crypto"], optional = true }
async-trait = { version = "0.1.89", optional = true }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id", "util"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"], optional = true }
dashmap = { version = "6.1.0", optional = true }
futures = { version = "0.3", optional = true }
ammonia = { version = "4.0", optional = true }

# Common dependencies (both WASM and server)
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
time = { version = "0.3.43", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.11.3"
rand = "0.9.2"
getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
getrandom = { version = "0.2", features = ["js"] }

# WebAssembly specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlFormElement",
    "Window",
    "Location",
    "Storage",
    "NodeList"
] }
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"

[features]
default = ["server"]
server = [
    "axum",
    "dotenvy",
    "sqlx",
    "tokio",
    "tower",
    "bcrypt",
    "argon2",
    "tower_governor",
    "jsonwebtoken",
    "async-trait",
    "tower-http",
    "tracing",
    "tracing-subscriber",
    "dashmap",
    "futures",
    "ammonia"
]
wasm = []
